--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:create": "node database/createTables.js",
+    "db:seed": "node database/seedData.js",
+    "db:setup": "node database/createTables.js && node database/seedData.js"
   },
   "keywords": ["car-booking", "taxi", "transportation", "mysql", "nodejs"],
   "author": "DC Team",
