--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
     "db:clear": "node database/clearSeedData.js",
     "db:setup": "node database/createTables.js && node database/seedData.js"
   },
-  "keywords": ["car-booking", "taxi", "transportation", "mysql", "nodejs"],
+  "keywords": [
+    "car-booking",
+    "taxi",
+    "transportation",
+    "mysql",
+    "nodejs"
+  ],
   "author": "DC Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
