Add driver registration, email notifications, payment enforcement and debt management features

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,26 @@
 # Environment variables
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=your_password
-DB_NAME=dc_car_booking
-JWT_SECRET=dc_car_booking_secret_key_2024
+DB_PASSWORD=
+DB_NAME=dcdb
+JWT_SECRET=your-secret-key-here
 PORT=3000
 
 # Upload settings
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./public/uploads
+
+# Google OAuth Configuration
+# Get Client ID and Client Secret from: https://console.cloud.google.com/
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
+
+# Session Secret (change to random string for production)
+SESSION_SECRET=your-session-secret-here
+
+# Email Configuration
+# Gmail: Enable 2-Step Verification and create App Password at: https://myaccount.google.com/apppasswords
+EMAIL_SERVICE=gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password-here
